--- a/demo.html
+++ b/demo.html
@@ -2,6 +2,7 @@
 	<head>
 		<title>jQuery Teletype Plugin</title>
 		<link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
+		<meta name="viewport" content="width=device-width" />
 		<meta charset="UTF-8" />
 		<style>
 		html, body { padding: 0; margin: 0; font-family: 'Montserrat', helvetica, sans-serif; background: #222; color: #fff; font-size: 40pt; line-height: 1.5; padding: 2%; }
