--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 	<head>
 		<title>jQuery Teletype Plugin</title>
 		<link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
+		<meta name="viewport" content="width=device-width" />
 		<meta charset="UTF-8" />
 		<style>
 		html, body { padding: 0; margin: 0; font-family: 'Montserrat', helvetica, sans-serif; background: #222; color: #fff; font-size: 40pt; line-height: 1.5; padding: 2%; }
@@ -13,7 +14,7 @@
 		<h1>jquery.teletype.js</h1>
 		<p class="type-text" title="auti~1 o^1000  type terminal commands.;including new lines,\npauses^2000 , character deletion~20  and other features.; auto delete^2000 , customisable cursor; and loads~5 more...; what will you do?">:)</p>
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-		<script src="jquery.teletype.js"></script>
+		<script src="jquery.teletype.min.js"></script>
 		<script>
 		$( function() {
 			$( '.type-text' ).each( function() {
