Modified device width for viewport.

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 	<head>
 		<title>jQuery Teletype Plugin</title>
 		<link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
-		<meta name="viewport" content="width=device-width" />
+		<meta name="viewport" content="width=800" />
 		<meta charset="UTF-8" />
 		<style>
-		html, body { padding: 0; margin: 0; font-family: 'Montserrat', helvetica, sans-serif; background: #222; color: #fff; font-size: 40pt; line-height: 1.5; padding: 2%; }
+		html, body { min-width: 800px; padding: 0; margin: 0; font-family: 'Montserrat', helvetica, sans-serif; background: #222; color: #fff; font-size: 20pt; line-height: 1.5; padding: 2%; }
 		h1 { margin: 0; padding: 0; }
 		.teletype-prefix, .teletype-cursor { color: #00bd9c; }
 		</style>
