Added type / letter callback.

--- a/index.html
+++ b/index.html
@@ -12,22 +12,32 @@
 	</head>
 	<body>
 		<h1>jquery.teletype.js</h1>
-		<p class="type-text" title="auti~1 o^1000  type terminal commands.;including new lines,\npauses^2000 , character deletion~20  and other features.; auto delete^2000 , customisable cursor; and loads~5 more...; what will you do?">:)</p>
+		<p class="type-text" title="auti~1 o^1000  type terminal commands.;including new lines,\npauses^2000 , character deletion~20  and other features.; auto delete^2000 , customisable cursor.^2000 ; and loads~5 more...; what will you do?">:)</p>
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 		<script src="jquery.teletype.min.js"></script>
 		<script>
 		$( function() {
 			$( '.type-text' ).each( function() {
 				var items = $( this ).attr( 'title' ) + ';' + $( this ).text();
-				$( this ).empty().attr( 'title', '' ).teletype( {
-					text: $.map( items.split( ';' ), $.trim ),
+				var thing = $( this ).empty().attr( 'title', '' ).teletype( {
+					text: items.split( ';' ),
 					typeDelay: 10,
 					backDelay: 20,
-					cursor: '▋', 
+					cursor: '▋',
 					delay: 3000,
 					preserve: false,
 					prefix: '[teletype ~]# ',
-					loop: 0
+					loop: 0,
+					callbackType: function( letter, current, teletype ) {
+						if ( current.index == 2 && current.position == 13 ) {
+							teletype.setCursor( '_' );
+						}
+					},
+					callbackNext: function( current, teletype ) {
+						if ( current.index == 3 ) {
+							teletype.setCursor( '▋' );
+						}
+					}
 				} );
 			} );
 		} );
