--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		html, body { min-width: 800px; padding: 0; margin: 0; font-family: 'Montserrat', helvetica, sans-serif; background: #222; color: #fff; font-size: 20pt; line-height: 1.5; padding: 2%; }
 		h1 { margin: 0; padding: 0; }
 		.teletype-prefix, .teletype-cursor { color: #00bd9c; }
+		#fork-me { position: absolute; top: 0; right: 0; border: 0; }
 		</style>
 	</head>
 	<body>
@@ -42,5 +43,8 @@
 			} );
 		} );
 		</script>
+		<a id="fork-me" href="https://github.com/stvwhtly/jquery-teletype-plugin">
+			<img src="https://camo.githubusercontent.com/52760788cde945287fbb584134c4cbc2bc36f904/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f77686974655f6666666666662e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_white_ffffff.png" />
+		</a>
 	</body>
 </html>
